replicated the home page's navbar on the rest of the html pages and applied the same CSS on each one of them

--- a/Unit Converter/HTML/length.html
+++ b/Unit Converter/HTML/length.html
@@ -4,10 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Length</title>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   
-    
+  <div class="navbar">
+    <span class="unit">Unit Convertor</span>
+    <div>
+        <a href="./HTML/length.html">Length</a>
+        <a href="./HTML/weight.html">Weight</a>
+        <a href="./HTML/volume.html">Volume</a>
+        <a href="./HTML/currency.html">Currency</a>
+        <a href="./HTML/temperature.html">Temperature</a>
+    </div>
+   
+  </div>
     <p id="desc">This is a simple unit converter.</p>
         
         <p>You can also convert from one unit to another unit.</p>
