--- a/Unit Converter/index.html
+++ b/Unit Converter/index.html
@@ -12,11 +12,11 @@
 <div class="navbar">
     <span class="unit">Unit Convertor</span>
     <div>
-        <a href="">Length</a>
-        <a href="">Weight</a>
-        <a href="">Volume</a>
-        <a href="">Currency</a>
-        <a href="">Temperature</a>
+        <a href="./HTML/length.html">Length</a>
+        <a href="./HTML/weight.html">Weight</a>
+        <a href="./HTML/volume.html">Volume</a>
+        <a href="./HTML/currency.html">Currency</a>
+        <a href="./HTML/temperature.html">Temperature</a>
     </div>
    
   </div>
