corrected the paths

--- a/Unit Converter/HTML/volume.html
+++ b/Unit Converter/HTML/volume.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <div class="navbar">
+  <div class="navbar"> 
     <span class="unit">Unit Convertor</span>
     <div>
-        <a href="./HTML/length.html">Length</a>
-        <a href="./HTML/weight.html">Weight</a>
-        <a href="./HTML/volume.html">Volume</a>
-        <a href="./HTML/currency.html">Currency</a>
-        <a href="./HTML/temperature.html">Temperature</a>
+        <a href="./length.html">Length</a>
+        <a href="./weight.html">Weight</a>
+        <a href="./volume.html">Volume</a>
+        <a href="./currency.html">Currency</a>
+        <a href="./temperature.html">Temperature</a>
     </div>
    
   </div>
