--- a/Unit Converter/HTML/currency.html
+++ b/Unit Converter/HTML/currency.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currency</title>
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../styles.css">        
 </head>
 <body>
-  <div class="navbar">
+  <div class="navbar">                                               
     <span class="unit">Unit Convertor</span>
     <div>
-        <a href="./HTML/length.html">Length</a>
-        <a href="./HTML/weight.html">Weight</a>
-        <a href="./HTML/volume.html">Volume</a>
-        <a href="./HTML/currency.html">Currency</a>
-        <a href="./HTML/temperature.html">Temperature</a>
+        <a href="./length.html">Length</a>
+        <a href="./weight.html">Weight</a>
+        <a href="./volume.html">Volume</a>
+        <a href="./currency.html">Currency</a>
+         <a href="./temperature.html">Temperature</a>
     </div>
    
   </div>
