--- a/Unit Converter/HTML/temperature.html
+++ b/Unit Converter/HTML/temperature.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Temperature</title>
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../styles.css"> 
 </head>
 <body>
   <div class="navbar">
-    <span class="unit">Unit Convertor</span>
-    <div>
-        <a href="./HTML/length.html">Length</a>
-        <a href="./HTML/weight.html">Weight</a>
-        <a href="./HTML/volume.html">Volume</a>
-        <a href="./HTML/currency.html">Currency</a>
-        <a href="./HTML/temperature.html">Temperature</a>
+    <span class="unit">Unit Convertor</span> 
+        <a href="./length.html">Length</a>
+        <a href="./weight.html">Weight</a>
+        <a href="./volume.html">Volume</a>
+        <a href="./currency.html">Currency</a>
+        <a href="./temperature.html">Temperature</a>
     </div>
    
   </div>
