--- a/Unit Converter/HTML/length.html
+++ b/Unit Converter/HTML/length.html
@@ -5,8 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Length</title>
   <link rel="stylesheet" href="../CSS/length.css">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+
+  <nav>
+    <ul class="sidebar">
+      <li onclick=hideSidebar()><a href="../HTML/length.html"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
+      <li><a class="len" href="./length.html">Length</a></li>
+      <li><a href="./weight.html">Weight</a></li>
+      <li><a href="./volume.html">Volume</a></li>
+      <li><a href="./currency.html">Currency</a></li>
+      <li><a href="./temperature.html">Temperature</a></li>
+    </ul>
+    <ul>
+      <li><a href="../index.html">Unit Convertor</a></li>
+      <li class="hideOnMobile len"><a href="./length.html">Length</a></li>
+      <li class="hideOnMobile"><a href="./weight.html">Weight</a></li>
+      <li class="hideOnMobile "><a href="./volume.html">Volume</a></li>
+      <li class="hideOnMobile"><a href="./currency.html">Currency</a></li>
+      <li class="hideOnMobile"><a href="./temperature.html">Temperature</a></li>
+      <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>
+    </ul>
+  </nav>
+
   <div class="bg">
     <div class="containment">
       <p id="desc">This is a simple unit converter.</p>
@@ -41,6 +63,7 @@
         </form>
       </div>
     </div>
-  </div>
+</div>
+<script src="../script.js"></script>
 </body>
 </html>
