--- a/Unit Converter/HTML/volume.html
+++ b/Unit Converter/HTML/volume.html
@@ -4,9 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Volume</title>
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../CSS/volume.css">
 </head>
 <body>
-  
+  <nav>
+    <ul class="sidebar">
+      <li onclick=hideSidebar()><a href="../HTML/volume.html"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
+      <li><a href="./length.html">Length</a></li>
+      <li><a href="./weight.html">Weight</a></li>
+      <li><a class="vol" href="./volume.html">Volume</a></li>
+      <li><a href="./currency.html">Currency</a></li>
+      <li><a href="./temperature.html">Temperature</a></li>
+    </ul>
+    <ul>
+      <li><a href="../index.html">Unit Convertor</a></li>
+      <li class="hideOnMobile"><a href="./length.html">Length</a></li>
+      <li class="hideOnMobile"><a href="./weight.html">Weight</a></li>
+      <li class="hideOnMobile vol"><a href="./volume.html">Volume</a></li>
+      <li class="hideOnMobile"><a href="./currency.html">Currency</a></li>
+      <li class="hideOnMobile"><a href="./temperature.html">Temperature</a></li>
+      <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>
+    </ul>
+  </nav>
+
   
     <p id="desc">This is a simple unit converter.</p>
         
@@ -45,7 +66,6 @@
   
 </form>
 
-
-  
+<script src="../script.js"></script>
 </body>
 </html>
