copied the navbar and updated css for navbar and linked navbar.css in each html pages and updated the anchor tags also

--- a/Unit Converter/HTML/temperature.html
+++ b/Unit Converter/HTML/temperature.html
@@ -5,9 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Temperature</title>
 </head>
+<link rel="stylesheet" href="../CSS/navbar.css">
 <body>
   
-       
+  <div class="navbar">
+    <span class="unit">Unit Convertor</span>
+    <div>
+      <a href="./length.html">Length</a>
+      <a href="./weight.html">Weight</a>
+        <a href="./volume.html">Volume</a>
+        <a href="./currency.html">Currency</a>
+        <a href="./temperature.html">Temperature</a>
+    </div>
+   
+  </div>     
   
     <p id="desc">This is a simple unit converter.</p>
         
