--- a/Unit Converter/HTML/length.html
+++ b/Unit Converter/HTML/length.html
@@ -5,8 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Length</title>
   <link rel="stylesheet" href="../CSS/length.css">
+  <link rel="stylesheet" href="../CSS/navbar.css">
 </head>
 <body>
+  <div class="navbar">
+    <span class="unit">Unit Convertor</span>
+    <div>
+        <a href="./length.html">Length</a>
+        <a href="./weight.html">Weight</a>
+        <a href="./volume.html">Volume</a>
+        <a href="./currency.html">Currency</a>
+        <a href="./temperature.html">Temperature</a>
+    </div>
+   
+  </div>
   <div class="bg">
     <div class="containment">
       <p id="desc">This is a simple unit converter.</p>
