corrected an erron in temperature tab

--- a/Unit Converter/HTML/temperature.html
+++ b/Unit Converter/HTML/temperature.html
@@ -9,11 +9,13 @@
 <body>
   <div class="navbar">
     <span class="unit">Unit Convertor</span> 
+        <div>
         <a href="./length.html">Length</a>
         <a href="./weight.html">Weight</a>
         <a href="./volume.html">Volume</a>
         <a href="./currency.html">Currency</a>
         <a href="./temperature.html">Temperature</a>
+      </div>
     </div>
    
   </div>
