adding css property in weight.html

--- a/Unit Converter/HTML/weight.html
+++ b/Unit Converter/HTML/weight.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weight</title>
+  <link rel="stylesheet" href="../CSS/weight.css">
 </head>
 <body>
   
@@ -13,6 +14,7 @@
         <p>You can also convert from one unit to another unit.</p>
 
 <div  class="container-fluid ">
+  <img src="../wietght.png" class="wt-image" alt="">
     <div class="row justify-content-evenly">
 <select id="selectfr" name="slfrom" class="form-select slfr" aria-label="Default select example">
     <option value="0">Select unit you are converting from</option>
