--- a/Unit Converter/index.html
+++ b/Unit Converter/index.html
@@ -21,7 +21,10 @@
       <a href="HTML/currency.html" class="link">Currency</a>
       <a href="HTML/temperature.html" class="link">Temperature</a>
     </div>
-    <span><i class="fa-solid fa-moon fa-2x"></i></span>
+    <span class="fontawesome">
+      <!-- <i class="fa-solid fa-moon fa-2x"></i> -->
+      <i class="fa-solid fa-bars fa-2x"></i>
+    </span>
   </div>
   <div class="main-content">
     <div id="online">
@@ -32,15 +35,12 @@
       <h2>Hi, What do you want to convert !</h2>
     </div>
 
-    <div class="info">
-      <!-- <i class="fa-solid fa-3x fa-circle-chevron-left"></i> -->
       <div class="container">
         <div id="length" class="inside">
           <div class="layer"></div>
           <div class="converterInfo">
             <h3><a href="HTML/length.html">Length Converter</a></h3>
             <p>A length converter converts measurements from one unit of length to another. It allows you to easily convert measurements such as inches to centimeters, feet to meters, or miles to kilometers, among others. It simplifies calculations and helps in comparing measurements across different units.</p>
-            <!-- <button class="btn">Read more</button> -->
           </div>
         </div>
 
@@ -49,7 +49,6 @@
           <div class="converterInfo">
             <h3><a href="HTML/weight.html">Weight Converter</a></h3>
             <p>A weight converter is a tool used to convert measurements of weight or mass from one unit to another. It simplifies tasks such as converting kilograms to pounds, grams to ounces, or metric tons to short tons.</p>
-            <!-- <button class="btn">Read more</button> -->
           </div>
         </div>
 
@@ -58,7 +57,6 @@
           <div class="converterInfo">
             <h3><a href="HTML/volume.html">Volume Converter</a></h3>
             <p>A litre converter is a tool designed to convert volume measurements between litres and other units such as millilitres, cubic meters, and cubic centimeters. It simplifies tasks by allowing users to input a volume in litres and instantly obtain the equivalent measurement in their desired unit, or vice versa.</p>
-            <!-- <button class="btn">Read more</button> -->
           </div>
         </div>
 
@@ -68,7 +66,6 @@
             <h3><a href="HTML/currency.html">Currency Converter</a></h3>
             <p>
               A currency converter is a tool or application used to convert the value of one currency into another currency based on the current exchange rates. It allows users to quickly assess the equivalent value of a certain amount of money in different currencies.</p>
-            <!-- <button class="btn">Read more</button> -->
           </div>
         </div>
 
@@ -78,18 +75,16 @@
             <h3><a href="HTML/temperature.html">Temperature Converter</a></h3>
             <p>
               A temperature converter is a tool used to convert temperatures between different units of measurement, such as Celsius, Fahrenheit, and Kelvin. It allows users to easily convert temperatures from one scale to another, facilitating tasks like converting Celsius to Fahrenheit or vice versa.</p>
-            <!-- <button class="btn">Read more</button> -->
           </div>
         </div>
       </div>
-      <!-- <i class="fa-solid fa-3x fa-circle-chevron-right"></i> -->
-    </div>
+    
   </div>
 
   <div class="preFooter">
     <p>OP Code</p>
     <p>HTML</p>
-    <p id="javaScript">JavaScript</p>
+    <p>JavaScript</p>
     <p>CSS</p>
   </div>
 
@@ -100,7 +95,7 @@
   </footer>
 
   <script src="https://kit.fontawesome.com/df53f4a996.js" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 
 </html>
