--- a/Unit Converter/HTML/temperature.html
+++ b/Unit Converter/HTML/temperature.html
@@ -4,31 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Temperature</title>
-  <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="../CSS/temperature.css">
+  <link rel="stylesheet" href="../CSS/navbar.css">
 </head>
 <body>
        
   <nav>
     <ul class="sidebar">
-      <li onclick=hideSidebar()><a href="../HTML/temperature.html"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
+      <li onclick=hideSidebar()><a href="./temperature.html"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
       <li><a href="./length.html">Length</a></li>
       <li><a href="./weight.html">Weight</a></li>
       <li><a href="./volume.html">Volume</a></li>
       <li><a href="./currency.html">Currency</a></li>
-      <li><a class="temp" href="./temperature.html">Temperature</a></li>
+      <li><a class="cur" href="./temperature.html">Temperature</a></li>
     </ul>
-    <ul>
-      <li><a href="../index.html">Unit Convertor</a></li>
+    <ul class="navbar">
+      <li><a href="../index.html" style="color: black; font-size: 35px; font-weight: 800;">Unit Convertor</a></li>
       <li class="hideOnMobile"><a href="./length.html">Length</a></li>
       <li class="hideOnMobile"><a href="./weight.html">Weight</a></li>
       <li class="hideOnMobile"><a href="./volume.html">Volume</a></li>
       <li class="hideOnMobile"><a href="./currency.html">Currency</a></li>
-      <li class="hideOnMobile temp"><a href="./temperature.html">Temperature</a></li>
+      <li class="hideOnMobile"><a class="cur" href="./temperature.html">Temperature</a></li>
       <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>
     </ul>
   </nav>
-
     <p id="desc">This is a simple unit converter.</p>
         
         <p>You can also convert from one unit to another unit.</p>
@@ -62,6 +61,7 @@
 
   
 </form>
-<script src="../script.js"></script>
+<script src="../Javascript/temperature.js"></script>
+<script src="../Javascript/navbar.js"></script>
 </body>
 </html>
