--- a/Unit Converter/index.html
+++ b/Unit Converter/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./CSS/navbar.css">
     
 </head>
 <body>
@@ -17,8 +18,8 @@
         <li><a href="./HTML/currency.html">Currency</a></li>
         <li><a href="./HTML/temperature.html">Temperature</a></li>
       </ul>
-      <ul>
-        <li><a href="index.html">Unit Convertor</a></li>
+      <ul class="navbar">
+        <li><a href="index.html" style="color: black; font-size: 35px; font-weight: 800;">Unit Convertor</a></li>
         <li class="hideOnMobile"><a href="./HTML/length.html">Length</a></li>
         <li class="hideOnMobile"><a href="./HTML/weight.html">Weight</a></li>
         <li class="hideOnMobile"><a href="./HTML/volume.html">Volume</a></li>
@@ -33,5 +34,6 @@
 
   
 <script src="script.js"></script>
+<script src="./Javascript/navbar.js"></script>
 </body>
 </html>
